# evo_alg_playground

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: __init__.py
src/algorithms/: __init__.py  differential_evolution.py  particle_swarm.py
src/problems/: test_functions.py
src/utils/: logging.py  visualization.py
